// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crud resolvers execution basic operations _count for relations should properly call prisma client: firstModel.findFirst call args 1`] = `
Array [
  Array [
    Object {
      "include": Object {
        "_count": Object {
          "select": Object {
            "secondModelsField": true,
          },
        },
      },
    },
  ],
]
`;

exports[`crud resolvers execution basic operations _count for relations should properly call prisma client: secondModelsField count mocked response 1`] = `
Object {
  "findFirstFirstModel": Object {
    "_count": Object {
      "secondModelsField": 2,
    },
    "idField": 1,
  },
}
`;

exports[`crud resolvers execution basic operations should properly call PrismaClient on \`create\` action: createUser call args 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "dateField": 2019-12-31T14:16:02.572Z,
        "optionalStringField": "optional",
        "uniqueStringField": "unique",
      },
    },
  ],
]
`;

exports[`crud resolvers execution basic operations should properly call PrismaClient on \`create\` action: createUser mocked response 1`] = `
Object {
  "createOneUser": Object {
    "dateField": "2019-12-31T14:16:02.572Z",
    "intIdField": 1,
  },
}
`;

exports[`crud resolvers execution basic operations should properly call PrismaClient on \`delete\` action: deleteUser call args 1`] = `
Array [
  Array [
    Object {
      "where": Object {
        "uniqueStringField": "unique",
      },
    },
  ],
]
`;

exports[`crud resolvers execution basic operations should properly call PrismaClient on \`delete\` action: deleteUser mocked response 1`] = `
Object {
  "deleteOneUser": Object {
    "dateField": "2019-12-31T14:16:02.572Z",
    "intIdField": 1,
  },
}
`;

exports[`crud resolvers execution basic operations should properly call PrismaClient on \`deleteMany\` action: deleteManyUser call args 1`] = `
Array [
  Array [
    Object {
      "where": Object {
        "dateField": Object {
          "lte": 2019-12-31T19:16:02.572Z,
        },
      },
    },
  ],
]
`;

exports[`crud resolvers execution basic operations should properly call PrismaClient on \`deleteMany\` action: deleteManyUser mocked response 1`] = `
Object {
  "deleteManyUser": Object {
    "count": 3,
  },
}
`;

exports[`crud resolvers execution basic operations should properly call PrismaClient on \`findMany\` action: findManyUser call args 1`] = `
Array [
  Array [
    Object {
      "orderBy": Array [
        Object {
          "intIdField": "desc",
        },
      ],
      "skip": 1,
      "take": 1,
      "where": Object {
        "dateField": Object {
          "lte": 2019-12-31T19:16:02.572Z,
        },
      },
    },
  ],
]
`;

exports[`crud resolvers execution basic operations should properly call PrismaClient on \`findMany\` action: users mocked response 1`] = `
Object {
  "users": Array [
    Object {
      "dateField": "2019-12-31T14:16:02.572Z",
      "intIdField": 1,
    },
  ],
}
`;

exports[`crud resolvers execution basic operations should properly call PrismaClient on \`findUnique\` action: findUniqueUser call args 1`] = `
Array [
  Array [
    Object {
      "where": Object {
        "uniqueStringField": "uniqueValue",
      },
    },
  ],
]
`;

exports[`crud resolvers execution basic operations should properly call PrismaClient on \`findUnique\` action: user mocked response 1`] = `
Object {
  "user": Object {
    "dateField": "2019-12-31T14:16:02.572Z",
    "intIdField": 1,
  },
}
`;

exports[`crud resolvers execution basic operations should properly call PrismaClient on \`update\` action: updateUser call args 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "dateField": Object {
          "set": 2019-12-31T14:16:02.572Z,
        },
      },
      "where": Object {
        "uniqueStringField": "unique",
      },
    },
  ],
]
`;

exports[`crud resolvers execution basic operations should properly call PrismaClient on \`update\` action: updateUser mocked response 1`] = `
Object {
  "updateOneUser": Object {
    "dateField": "2019-12-31T14:16:02.572Z",
    "intIdField": 1,
  },
}
`;

exports[`crud resolvers execution basic operations should properly call PrismaClient on \`updateMany\` action: updateManyUser call args 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "optionalStringField": null,
      },
      "where": Object {
        "dateField": Object {
          "lte": 2019-12-31T19:16:02.572Z,
        },
      },
    },
  ],
]
`;

exports[`crud resolvers execution basic operations should properly call PrismaClient on \`updateMany\` action: updateManyUser mocked response 1`] = `
Object {
  "updateManyUser": Object {
    "count": 3,
  },
}
`;

exports[`crud resolvers execution basic operations should properly call PrismaClient on \`upsert\` action: upsertUser call args 1`] = `
Array [
  Array [
    Object {
      "create": Object {
        "dateField": 2019-12-31T14:16:02.572Z,
        "optionalStringField": "optional",
        "uniqueStringField": "unique",
      },
      "update": Object {
        "optionalStringField": null,
      },
      "where": Object {
        "uniqueStringField": "unique",
      },
    },
  ],
]
`;

exports[`crud resolvers execution basic operations should properly call PrismaClient on \`upsert\` action: upsertUser mocked response 1`] = `
Object {
  "upsertOneUser": Object {
    "dateField": "2019-12-31T14:16:02.572Z",
    "intIdField": 1,
    "optionalStringField": "optional",
    "uniqueStringField": "unique",
  },
}
`;
